--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
-  "name": "dashboard-sahaj",
+  "name": "novergy-solar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-file-previewer": "^0.6.3",
+    "react-icons": "^4.2.0",
+    "react-iframe": "^1.8.0",
+    "react-json-to-csv": "^1.0.4",
+    "react-pro-sidebar": "^0.6.0",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sliding-pane": "^7.0.0",
+    "react-switch": "^6.0.0",
+    "react-toastify": "^7.0.3",
+    "react-treebeard": "^3.2.4",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_API_ENDPOINT=http://139.180.131.67:8080/Thingworx/Things react-scripts start",
+    "build": "REACT_APP_API_ENDPOINT=http://139.180.131.67:8080/Thingworx/Things react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
